collapse fix

--- a/style.css
+++ b/style.css
@@ -639,7 +639,7 @@ h1 {
   margin: 0;
 }
 
-.list-group-item {
+#myList .list-group-item {
   display: inline-block;
   text-align: center;
   width: 100%;
